<resources>
    <string name="app_name">Ich</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ich">Indian Coffee House</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="forgot_password">Forgot Your Password</string>
    <string name="err_msg_password">Enter the password, Length Should be 6</string>
    <string name="err_msg_email">Enter valid email</string>
    <string name="hint_fnmae">First Name</string>
    <string name="hint_lnmae">Last Name</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="alraeadyauser">Already A User?</string>
    <string name="hint_privilage">Enter Previlage</string>
    <string name="hint_address">Enter Address1</string>
    <string name="hint_address2">Enter Address2</string>
    <string name="hint_city">Enter City</string>
    <string name="hint_landmark">Nearest Landmark</string>
    <string name="hint_country">Enter Country</string>
    <string name="hint_phoneno">Enter Phone No</string>
    <string name="err_msg_password_notmatching">Password not matching</string>
    <string name="err_msg_field">Enter fields</string>
    <string name="job_create_header_1">Your Details</string>
    <string name="order_create_header_two">Payment</string>
    <string name="order_create_header_three">Confirmation</string>
    <string name="proceed">Proceed</string>
    <string name="guest">GUEST</string>
</resources>
