<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/text_size"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"

    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:gravity="center|top"
       >
      <android.support.design.widget.TextInputLayout
          android:id="@+id/input_layout_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <EditText
             android:id="@+id/input_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/text_size"
             android:inputType="textEmailAddress"
             android:drawableStart="@drawable/email"
             android:drawablePadding="@dimen/web_size"
             android:textColor="@color/colorAccent"
             android:textColorHint="@color/colorAccent"
             android:backgroundTint="@color/colorAccent"
             android:hint="@string/hint_email" />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout

          android:id="@+id/input_layout_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <EditText
             android:id="@+id/input_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:textSize="@dimen/text_size"
             android:drawableStart="@drawable/ic_password"
             android:drawablePadding="@dimen/web_size"
             android:textColor="@color/colorAccent"
             android:textColorHint="@color/colorAccent"
             android:backgroundTint="@color/colorAccent"
             android:hint="@string/hint_password" />
      </android.support.design.widget.TextInputLayout>

      <Button android:id="@+id/btn_signin"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/login"
          android:textSize="@dimen/text_size"
          android:background="@color/colorAccent"
          android:layout_marginTop="@dimen/text_size"
          android:textColor="#fff"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textSize="@dimen/text_size"
          android:layout_marginTop="@dimen/web_size"
          android:textColor="@color/colorPrimaryText"
          android:text="@string/forgot_password"/>

   </LinearLayout>

</LinearLayout>