<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context="com.example.admin.ich.modules.Login.LoginPageActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/header_text_size">

        <LinearLayout
            android:id="@+id/lisignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:padding="@dimen/text_size"
            android:weightSum="3">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="@dimen/text_size_1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#fff" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="#fff"
                android:textSize="@dimen/text_size_1" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#fff" />

            <TextView
                android:id="@+id/tv_guest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/guest"
                android:textColor="#fff"
                android:textSize="@dimen/text_size_1" />
        </LinearLayout>

    </LinearLayout>


    <!-- bottom sheet layout -->

</RelativeLayout>
